--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,10 @@ img{display: block;}
     margin-right: 40px;
 }
 
+.header-list-item:last-child{
+    margin-right: 0;
+}
+
 .header-list-item a{
     display: block;
 
@@ -131,7 +135,7 @@ img{display: block;}
 /*- HERO -*/
 .hero{
     background: var(--navy-blue);
-    padding: 180px;
+    padding: 180px 0;
 }
 
 .hero-container{
@@ -217,7 +221,7 @@ img{display: block;}
 
 /*-- ABOUT --*/
 .about{
-    padding: 120px  0;
+    padding: 0 0 120px  0;
 }
 
 .about-heading{
@@ -270,7 +274,7 @@ img{display: block;}
 .team-list-item{
     background: #fff;
     padding-bottom: 32px;
-    width: calc((100% - 3*24)/4);
+    width: calc((100% - 3*24px)/4);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px; 
 }
@@ -364,7 +368,7 @@ img{display: block;}
     background: var(--ocean);
     color: #fff;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border:transparent;
+    border-color:transparent;
 }
 
 .jobs{
